layout bugfix added for injected html

--- a/src/scss/_vungle-ad-core.scss
+++ b/src/scss/_vungle-ad-core.scss
@@ -200,6 +200,7 @@ body > * {
 	overflow: hidden;
 	height: 100%;
 	width: 100%;
+	font-size: 0;
 	
 	#{$light-theme} {
 		background-color: $vungle-light-theme-background;
